--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "manifest_version": "3",
+    "manifest_version": "4",
     "short_name": "Primi",
     "name": "Primi",
     "description": "The Primitive 3D Modeler.",
@@ -8,7 +8,7 @@
     "icons":
     [
         {
-            "src": "icon.jpg",
+            "src": "icon.png",
             "sizes": "128x128",
             "type": "image/png"
         }
