--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
-    "manifest_version": "4",
+    "manifest_version": "5",
     "short_name": "Primi",
     "name": "Primi",
+    "id": "Primi",
     "description": "The Primitive 3D Modeler.",
     "display": "fullscreen",
     "start_url": "index.html",
@@ -9,8 +10,22 @@
     [
         {
             "src": "icon.png",
-            "sizes": "128x128",
+            "sizes": "256x256",
             "type": "image/png"
+        }
+    ],
+    "screenshots": [
+        {
+            "src": "screenshot-narrow.png",
+            "type": "image/png",
+            "sizes": "400x800",
+            "form_factor": "narrow"
+        },
+        {
+            "src": "screenshot-wide.png",
+            "type": "image/png",
+            "sizes": "1600x800",
+            "form_factor": "wide"
         }
     ]
 }
