--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,8 @@
     "name": "Primi",
     "id": "Primi",
     "description": "The Primitive 3D Modeler.",
+    "theme_color": "#888888",
+    "background_color": "#777777",
     "display": "fullscreen",
     "start_url": "index.html",
     "icons":
