--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
-    "short_name": "Primitive 3D",
-    "name": "Primitive 3D",
-    "id": "primitive-3d",
-    "version": "0.0.1",
+    "short_name": "Modeler",
+    "name": "Primitive Modeler",
+    "id": "primitive-modeler",
+    "version": "0.0.2",
     "description": "The Primitive 3D Modeler.",
     "theme_color": "#AAAAAA",
     "background_color": "#666666",
